[package]
name = "rust-cs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"

[profile.dev]
overflow-checks = false

[profile.release]
opt-level = 3
overflow-checks = false
lto = true
debug = false
panic = "abort"
codegen-units = 1
incremental = false
strip = "symbols"
